2005-09-28  Martin Baulig  <martin@ximian.com>
	* languages/mono/MonoPointerType.cs: New file.
	* languages/mono/MonoPointerObject.cs: New file.

	* languages/mono/MonoDebuggerSupport.cs
	(MonoDebuggerSupport.GetTypeFromSignature): Added support for
	`MONO_TYPE_PTR' and `MONO_TYPE_BYREF'.

	* languages/mono/MonoLanguageBackend.cs
	(MonoLanguageBackend.LookupMonoType): Create a `MonoPointerType'
	for `byref' types.


svn path=/trunk/debugger/; revision=50957

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,12 +2,12 @@ SUBDIRS = mono-debugger.tests
 
 AUTOMAKE_OPTIONS = dejagnu
 
-MCS_FLAGS=-debug
+MCS_FLAGS=-debug -unsafe
 
 noinst_SCRIPTS = \
 	TestManagedTypes.exe TestAssembly.exe TestNamespace.exe TestModule.dll \
 	MultiThread.exe TestInvocation.exe TestInheritance.exe Simple.exe TestException.exe \
-	TestRestart.exe TestDelegate.exe TestNull.exe TestIndexer.exe
+	TestRestart.exe TestDelegate.exe TestNull.exe TestIndexer.exe TestByRef.cs
 
 noinst_LTLIBRARIES=libfoo.la
 
@@ -16,7 +16,7 @@ noinst_PROGRAMS = testnativetypes module
 EXTRA_DIST = \
 	TestManagedTypes.cs TestAssembly.cs TestNamespace.cs TestModule.cs \
 	MultiThread.cs TestInvocation.cs TestInheritance.cs Simple.cs TestException.cs mdb.exp \
-	TestRestart.cs TestDelegate.cs TestNull.cs TestIndexer.exe
+	TestRestart.cs TestDelegate.cs TestNull.cs TestIndexer.exe TestByRef.exe
 
 RUNTESTFLAGS = --ignore "MultiThread.exp module.exp start-restart.exp TestModule.exp TestAssembly.exp"
 
