--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -7,7 +7,8 @@ MCS_FLAGS=-debug -unsafe
 noinst_SCRIPTS = \
 	TestManagedTypes.exe TestAssembly.exe TestNamespace.exe TestModule.dll \
 	MultiThread.exe TestInvocation.exe TestInheritance.exe Simple.exe TestException.exe \
-	TestRestart.exe TestDelegate.exe TestNull.exe TestIndexer.exe TestByRef.cs
+	TestRestart.exe TestDelegate.exe TestNull.exe TestIndexer.exe TestByRef.exe \
+	TestToString.exe
 
 noinst_LTLIBRARIES=libfoo.la
 
@@ -16,7 +17,7 @@ noinst_PROGRAMS = testnativetypes module
 EXTRA_DIST = \
 	TestManagedTypes.cs TestAssembly.cs TestNamespace.cs TestModule.cs \
 	MultiThread.cs TestInvocation.cs TestInheritance.cs Simple.cs TestException.cs mdb.exp \
-	TestRestart.cs TestDelegate.cs TestNull.cs TestIndexer.exe TestByRef.exe
+	TestRestart.cs TestDelegate.cs TestNull.cs TestIndexer.exe TestByRef.exe TestToString.exe
 
 RUNTESTFLAGS = --ignore "MultiThread.exp module.exp start-restart.exp TestModule.exp TestAssembly.exp"
 
