2005-12-07  Martin Baulig  <martin@ximian.com>
	Reworked the breakpoint code and added session management.

	* classes/DebuggerSession.cs
	(DebuggerSession): The new session management code.

	* classes/SourceFile.cs (SourceFile): Make this [Serializable].
	(SourceMethod): Likewise.

	* classes/SourceLocation.cs
	(SourceLocation): Make this [Serializable].

	* classes/EventHandle.cs
	(EventHandle): Don't implement `IEventHandle'; killed that
	interface.

	* arch/Bfd.cs (Bfd): Inherit from `SymbolFile', not `Module'.

	* languages/mono/MonoSymbolFile.cs
	(MonoSymbolFile): Inherit from `SymbolFile', not `Module'.

	* classes/CatchpointHandle.cs
	(CatchPointHandle): Don't use an `ExceptionCatchPoint' anymore; do
	everything in here instead.

	* classes/ThreadGroup.cs (ThreadGroup): Moved all the static
	methods into DebuggerManager.

	* classes/Module.cs
	(SymbolFile): New internal abstract class; replaces `ISymbolFile'.
	(Module): Don't make this abstract; split out all the
	functionality into `SymbolFile'.

	* classes/ExceptionCatchPoint.cs: Removed.

	* interfaces/IEventHandle.cs: Removed.

	* interfaces/ISymbolFile.cs: Removed.


svn path=/trunk/debugger/; revision=54027

--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -61,15 +61,16 @@ MDB_SERVER_SRCLIST = \
 	$(top_srcdir)/wrapper/Server.cs
 
 LIBRARY_DEPS = \
-	-r:Mono.GetOptions	\
-	-r:Mono.CompilerServices.SymbolWriter	\
-	-r:System.Runtime.Remoting		\
+	-r:Mono.GetOptions				\
+	-r:Mono.CompilerServices.SymbolWriter		\
+	-r:System.Runtime.Remoting			\
+	-r:System.Runtime.Serialization.Formatters.Soap	\
 	-r:./Mono.Debugger.Cecil.dll
 
 MDB_DEPS = \
-	-r:Mono.GetOptions	\
-	-r:Mono.CompilerServices.SymbolWriter	\
-	-r:System.Runtime.Remoting		\
+	-r:Mono.GetOptions				\
+	-r:Mono.CompilerServices.SymbolWriter		\
+	-r:System.Runtime.Remoting			\
 	-r:./Mono.Debugger.dll
 
 MDB_SERVER_DEPS = \
