2005-12-14  Martin Baulig  <martin@ximian.com>
	* wrapper/Mono.Debugger.Cecil.dll: Added this to SVN.

	* wrapper/Makefile.am: Don't build Mono.Debugger.Cecil.dll.


svn path=/trunk/debugger/; revision=54419

--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -25,6 +25,8 @@ MCS_FLAGS = -debug -define:DEBUG -nowarn:0169,0067
 
 noinst_SCRIPTS = Mono.Debugger.dll Mono.Debugger.Cecil.dll
 
+EXTRA_DATA = Mono.Debugger.Cecil.dll
+
 LANGUAGE_SPECIFIC_FILES = \
 	$(top_builddir)/frontend/CSharpExpressionParser.cs	\
 	$(top_srcdir)/frontend/CSharpTokenizer.cs
@@ -80,8 +82,8 @@ MDB_SERVER_DEPS = \
 Mono.Debugger.dll: Makefile Mono.Debugger.Cecil.dll $(LIBRARY_SRCLIST)
 	$(MCS) -target:library -out:Mono.Debugger.dll $(MCS_FLAGS) -keyfile:$(top_srcdir)/wrapper/mono.snk $(LIBRARY_DEPS) $(LIBRARY_SRCLIST)
 
-Mono.Debugger.Cecil.dll: Makefile $(top_srcdir)/cecil/lib/Mono.Cecil.dll.sources
-	(dir=`pwd` && cd $(top_srcdir)/cecil/lib && $(MCS) -target:library -out:$$dir/Mono.Debugger.Cecil.dll $(MCS_FLAGS) @Mono.Cecil.dll.sources -keyfile:$(top_srcdir)/wrapper/mono.snk)
+#Mono.Debugger.Cecil.dll: Makefile $(top_srcdir)/cecil/lib/Mono.Cecil.dll.sources
+#	(dir=`pwd` && cd $(top_srcdir)/cecil/lib && $(MCS) -target:library -out:$$dir/Mono.Debugger.Cecil.dll $(MCS_FLAGS) @Mono.Cecil.dll.sources -keyfile:$(top_srcdir)/wrapper/mono.snk)
 
 mdb.exe: Makefile $(MDB_SRCLIST) Mono.Debugger.dll
 	$(MCS) -out:mdb.exe $(MDB_DEPS) $(MDB_SRCLIST) $(MCS_FLAGS)
