--- a/backends/Makefile.am
+++ b/backends/Makefile.am
@@ -1,5 +1,5 @@
 SUBDIRS = classes server remoting
 
-EXTRA_DIST = BreakpointManager.cs Debugger.cs ILanguageBackend.cs \
-	Inferior.cs MonoThreadManager.cs Process.cs SingleSteppingEngine.cs StepFrame.cs \
-	ThreadManager.cs
+EXTRA_DIST = BreakpointManager.cs Debugger.cs ILanguageBackend.cs Inferior.cs \
+	MonoThreadManager.cs Process.cs ProcessStart.cs SingleSteppingEngine.cs \
+	StepFrame.cs TargetAccess.cs ThreadManager.cs
