--- a/languages/Makefile.am
+++ b/languages/Makefile.am
@@ -1,3 +1,8 @@
 SUBDIRS = native mono
 
-EXTRA_DIST =
+EXTRA_DIST = Language.cs TargetArrayObject.cs TargetArrayType.cs TargetClassObject.cs \
+	TargetClassType.cs TargetEnumObject.cs TargetEnumType.cs TargetFunctionType.cs \
+	TargetFundamentalObject.cs TargetFundamentalType.cs TargetMember.cs TargetObject.cs \
+	TargetObjectKind.cs TargetObjectObject.cs TargetObjectType.cs TargetPointerObject.cs \
+	TargetPointerType.cs TargetType.cs TargetVariable.cs
+
