2006-01-21  Martin Baulig  <martin@ximian.com>
	You need to use the latest SVN version of Mono from either HEAD or
	the mono-1-1-13 branch for this.

	* wrapper/mono-debugger-jit-wrapper.h: Removed.


svn path=/trunk/debugger/; revision=55882

--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -9,8 +9,7 @@ INCLUDES = \
 
 mono_debugger_mini_wrapper_SOURCES = \
 	mini-main.c			\
-	wrapper.c			\
-	mono-debugger-jit-wrapper.h
+	wrapper.c
 
 mono_debugger_mini_wrapper_LDADD = \
 	$(WRAPPER_LIBS)
