* arch/Makefile.am backends/remoting/Makefile.am backends/Makefile.am:   Update EXTRA_DIST to fix make dist and make distcheck
svn path=/trunk/debugger/; revision=57898

--- a/arch/Makefile.am
+++ b/arch/Makefile.am
@@ -19,4 +19,4 @@ CLEANFILES = lib*.a lib*.dll
 
 EXTRA_DIST = \
 	Architecture.cs Architecture_I386.cs Architecture_X86_64.cs BfdContainer.cs Bfd.cs \
-	BfdDisassembler.cs Disassembler.cs DwarfFrameReader.cs DwarfReader.cs
+	BfdDisassembler.cs Disassembler.cs DwarfFrameReader.cs DwarfReader.cs CoreFile.cs
