--- a/backends/Makefile.am
+++ b/backends/Makefile.am
@@ -2,4 +2,4 @@ SUBDIRS = classes server remoting
 
 EXTRA_DIST = BreakpointManager.cs Debugger.cs ILanguageBackend.cs Inferior.cs \
 	MonoThreadManager.cs Process.cs ProcessStart.cs SingleSteppingEngine.cs \
-	StepFrame.cs TargetAccess.cs ThreadManager.cs
+	StepFrame.cs ThreadBase.cs ThreadManager.cs Thread.cs
