--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,11 +1,10 @@
-SUBDIRS = mono-debugger.tests
-
-AUTOMAKE_OPTIONS = dejagnu
+SUBDIRS = src testsuite
+EXTRA_SUBDIRS = mono-debugger.tests
 
 MCS_FLAGS=-debug -unsafe
 
 noinst_SCRIPTS = \
-	TestManagedTypes.exe TestAssembly.exe TestNamespace.exe TestModule.dll \
+	TestAssembly.exe TestNamespace.exe TestModule.dll \
 	MultiThread.exe TestInvocation.exe TestInheritance.exe Simple.exe TestException.exe \
 	TestRestart.exe TestDelegate.exe TestNull.exe TestIndexer.exe TestByRef.exe \
 	TestToString.exe TestEnum.exe TestObject.exe TestProperty.exe TestAbort.exe \
@@ -16,12 +15,10 @@ noinst_LTLIBRARIES=libfoo.la
 noinst_PROGRAMS = testnativetypes module
 
 EXTRA_DIST = \
-	TestManagedTypes.cs TestAssembly.cs TestNamespace.cs TestModule.cs \
+	TestAssembly.cs TestNamespace.cs TestModule.cs \
 	MultiThread.cs TestInvocation.cs TestInheritance.cs Simple.cs TestException.cs mdb.exp \
 	TestRestart.cs TestDelegate.cs TestNull.cs TestIndexer.cs TestByRef.cs TestToString.cs \
 	TestEnum.cs TestObject.cs TestProperty.cs TestAbort.cs TestBreakpoint.exe
-
-RUNTESTFLAGS = --ignore "MultiThread.exp module.exp start-restart.exp TestModule.exp TestAssembly.exp"
 
 testnativetypes_SOURCES = testnativetypes.c
 
