--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -6,7 +6,7 @@ one_SCRIPTS = mdb.exe
 
 MCS_FLAGS = -debug -define:DEBUG -nowarn:0169,0067
 
-noinst_SCRIPTS = Mono.Debugger.dll
+noinst_SCRIPTS = Mono.Debugger.dll Mono.Debugger.Frontend.dll Mono.Debugger.Test.dll
 
 EXTRA_DATA = Mono.Debugger.Cecil.dll
 
@@ -41,6 +41,9 @@ LIBRARY_SRCLIST = \
 	$(top_srcdir)/interfaces/*.cs			\
 	AssemblyInfo.cs
 
+TEST_SRCLIST = \
+	$(top_srcdir)/test/testsuite/*.cs
+
 LIBRARY_DEPS = \
 	-r:Mono.GetOptions				\
 	-r:Mono.CompilerServices.SymbolWriter		\
@@ -52,8 +55,19 @@ MDB_DEPS = \
 	-r:Mono.CompilerServices.SymbolWriter		\
 	-r:./Mono.Debugger.dll
 
+TEST_DEPS = \
+	-r:./Mono.Debugger.dll				\
+	-r:./Mono.Debugger.Frontend.dll			\
+	-r:nunit.framework
+
 Mono.Debugger.dll: Makefile $(srcdir)/Mono.Debugger.Cecil.dll $(LIBRARY_SRCLIST)
 	$(MCS) -target:library -out:Mono.Debugger.dll $(MCS_FLAGS) -keyfile:$(top_srcdir)/wrapper/mono.snk $(LIBRARY_DEPS) $(LIBRARY_SRCLIST)
+
+Mono.Debugger.Frontend.dll: Makefile $(MDB_SRCLIST) Mono.Debugger.dll
+	$(MCS) -target:library -out:Mono.Debugger.Frontend.dll $(MCS_FLAGS) -keyfile:$(top_srcdir)/wrapper/mono.snk $(MDB_DEPS) $(MDB_SRCLIST)
+
+Mono.Debugger.Test.dll: Makefile $(Test_SRCLIST) Mono.Debugger.dll Mono.Debugger.Frontend.dll
+	$(MCS) -target:library -out:Mono.Debugger.Test.dll $(MCS_FLAGS) -keyfile:$(top_srcdir)/wrapper/mono.snk $(TEST_DEPS) $(TEST_SRCLIST)
 
 #Mono.Debugger.Cecil.dll: Makefile $(top_srcdir)/cecil/lib/Mono.Cecil.dll.sources
 #	(dir=`pwd` && cd $(top_srcdir)/cecil/lib && $(MCS) -target:library -out:$$dir/Mono.Debugger.Cecil.dll $(MCS_FLAGS) @Mono.Cecil.dll.sources -keyfile:$(top_srcdir)/wrapper/mono.snk)
