--- a/configure.in
+++ b/configure.in
@@ -241,5 +241,7 @@ arch/bfd/include/elf/Makefile
 arch/bfd/include/opcode/Makefile
 test/Makefile
 test/mono-debugger.tests/Makefile
+test/src/Makefile
+test/testsuite/Makefile
 doc/Makefile
 ])
