--- a/configure.in
+++ b/configure.in
@@ -180,6 +180,11 @@ if test x$server_only != xyes; then
    if test "x$MCS" = "x" ; then
       AC_MSG_ERROR([Can't find "mcs" in your PATH])
    fi
+
+   AC_PATH_PROG(NUNIT_CONSOLE, nunit-console)
+   if test "x$NUNIT_CONSOLE" = "x" ; then
+     AC_MSG_ERROR([Can't find "nunit-console" in your PATH])
+   fi
 fi
 
 top_srcdir=`pwd`
