--- a/test/testsuite/Makefile.am
+++ b/test/testsuite/Makefile.am
@@ -1,2 +1,7 @@
 EXTRA_DIST = \
-	NUnit.cs TestManagedTypes.cs TestInvocation.cs TestInheritance.cs
+	NUnit.cs \
+	TestBreakpoint.cs TestByRef.cs TestDelegate.cs TestEnum.cs \
+	TestIndexer.cs TestInheritance.cs TestInvocation.cs \
+	TestManagedTypes.cs TestNamespace.cs TestNull.cs TestObject.cs \
+	TestProperty.cs TestToString.cs
+
