2006-04-09  Martin Baulig  <martin@ximian.com>
	* test/testsuite/testnativefork.cs: New test.
	* test/src/testnativefork.c: Test case for the test.


svn path=/trunk/debugger/; revision=59270

--- a/test/src/Makefile.am
+++ b/test/src/Makefile.am
@@ -1,5 +1,7 @@
 MCS_FLAGS=-debug -unsafe
 
+AM_CFLAGS = -g -O0
+
 noinst_SCRIPTS = \
 	TestManagedTypes.exe TestInvocation.exe TestInheritance.exe \
 	TestDelegate.exe TestIndexer.exe TestEnum.exe \
@@ -13,6 +15,8 @@ EXTRA_DIST = \
 	TestRestart.cs TestNull.cs TestByRef.cs \
 	TestToString.cs TestObject.cs TestProperty.cs TestAbort.cs \
 	TestBreakpoint.cs TestNamespace.cs TestException.cs
+
+noinst_PROGRAMS = testnativefork
 
 %.exe:%.cs
 	$(MCS) $(MCS_FLAGS) -out:$@ $<
