2006-04-11  Martin Baulig  <martin@ximian.com>
	* test/testsuite/TestRestart.cs: New test.


svn path=/trunk/debugger/; revision=59368

--- a/test/src/Makefile.am
+++ b/test/src/Makefile.am
@@ -7,14 +7,16 @@ noinst_SCRIPTS = \
 	TestDelegate.exe TestIndexer.exe TestEnum.exe \
 	TestRestart.exe TestNull.exe TestByRef.exe \
 	TestToString.exe TestObject.exe TestProperty.exe TestAbort.exe \
-	TestBreakpoint.exe TestNamespace.exe TestException.exe
+	TestBreakpoint.exe TestNamespace.exe TestException.exe \
+	TestRestart.exe
 
 EXTRA_DIST = \
 	TestManagedTypes.cs TestInvocation.cs TestInheritance.cs \
 	TestDelegate.cs TestIndexer.cs TestEnum.cs \
 	TestRestart.cs TestNull.cs TestByRef.cs \
 	TestToString.cs TestObject.cs TestProperty.cs TestAbort.cs \
-	TestBreakpoint.cs TestNamespace.cs TestException.cs
+	TestBreakpoint.cs TestNamespace.cs TestException.cs \
+	TestRestart.cs
 
 noinst_PROGRAMS = testnativefork
 
