2006-04-12  Martin Baulig  <martin@ximian.com>
	* test/testsuite/testnativeexec.cs: New test.


svn path=/trunk/debugger/; revision=59394

--- a/classes/Makefile.am
+++ b/classes/Makefile.am
@@ -1,8 +1,8 @@
 EXTRA_DIST =  \
 	AddressDomain.cs AssemblerMethod.cs Backtrace.cs Breakpoint.cs BreakpointHandle.cs \
-	CatchpointHandle.cs DebuggerSession.cs EventHandle.cs InternalError.cs Method.cs \
+	DebuggerSession.cs InternalError.cs Method.cs Event.cs ExceptionCatchPoint.cs \
 	MethodSource.cs Module.cs ModuleManager.cs ObjectCache.cs ObjectContainer.cs \
-	Report.cs Semaphore.cs SimpleBreakpoint.cs SourceAddress.cs SourceBuffer.cs \
+	Report.cs Semaphore.cs SourceAddress.cs SourceBuffer.cs \
 	SourceFileFactory.cs SourceInfo.cs SourceLocation.cs StackFrame.cs Style.cs \
 	SymbolTableCollection.cs SymbolTable.cs SymbolTableException.cs SymbolTableManager.cs \
 	TargetAddress.cs TargetBinaryAccess.cs TargetBinaryReader.cs TargetBinaryWriter.cs \
