--- a/test/src/Makefile.am
+++ b/test/src/Makefile.am
@@ -10,7 +10,7 @@ noinst_SCRIPTS = \
 	TestRestart.exe TestNull.exe TestByRef.exe \
 	TestToString.exe TestObject.exe TestProperty.exe TestAbort.exe \
 	TestBreakpoint.exe TestNamespace.exe TestException.exe \
-	TestRestart.exe TestExec.exe
+	TestRestart.exe TestExec.exe TestChild.exe
 
 EXTRA_DIST = \
 	TestManagedTypes.cs TestInvocation.cs TestInheritance.cs \
@@ -18,7 +18,7 @@ EXTRA_DIST = \
 	TestRestart.cs TestNull.cs TestByRef.cs \
 	TestToString.cs TestObject.cs TestProperty.cs TestAbort.cs \
 	TestBreakpoint.cs TestNamespace.cs TestException.cs \
-	TestRestart.cs TestExec.cs
+	TestRestart.cs TestExec.cs TestChild.cs
 
 noinst_PROGRAMS = testnativefork testnativeexec testnativechild
 
