--- a/languages/mono/Makefile.am
+++ b/languages/mono/Makefile.am
@@ -3,4 +3,4 @@ EXTRA_DIST =  \
 	MonoDebuggerSupport.cs MonoEnumType.cs MonoFunctionType.cs MonoGenericInstanceType.cs \
 	MonoLanguageBackend.cs MonoMember.cs MonoNullObject.cs MonoObjectObject.cs MonoObjectType.cs \
 	MonoOpaqueType.cs MonoPointerObject.cs MonoPointerType.cs MonoStringObject.cs \
-	MonoStringType.cs MonoSymbolFile.cs MonoVariable.cs
+	MonoStringType.cs MonoSymbolFile.cs MonoVariable.cs MonoVariableLocation.cs
