--- a/classes/Makefile.am
+++ b/classes/Makefile.am
@@ -1,10 +1,10 @@
-EXTRA_DIST =  \
-	AddressDomain.cs AssemblerMethod.cs Backtrace.cs Breakpoint.cs BreakpointHandle.cs \
-	DebuggerSession.cs InternalError.cs Method.cs Event.cs ExceptionCatchPoint.cs \
-	MethodSource.cs Module.cs ModuleManager.cs ObjectCache.cs ObjectContainer.cs \
-	Report.cs Semaphore.cs SourceAddress.cs SourceBuffer.cs \
-	SourceFileFactory.cs SourceInfo.cs SourceLocation.cs StackFrame.cs Style.cs \
-	SymbolTableCollection.cs SymbolTable.cs SymbolTableException.cs SymbolTableManager.cs \
-	TargetAddress.cs TargetBinaryAccess.cs TargetBinaryReader.cs TargetBinaryWriter.cs \
-	TargetEvent.cs TargetException.cs TargetInvocationException.cs TargetMemoryArea.cs \
-	TargetMemoryException.cs ThreadGroup.cs Threading.cs
+EXTRA_DIST = \
+	AddressDomain.cs AssemblerMethod.cs Backtrace.cs Breakpoint.cs Debugger.cs \
+	DebuggerSession.cs Event.cs ExceptionCatchPoint.cs InternalError.cs Method.cs \
+	MethodSource.cs Module.cs ObjectCache.cs Process.cs Report.cs Semaphore.cs \
+	SourceAddress.cs SourceBuffer.cs SourceFileFactory.cs SourceInfo.cs \
+	SourceLocation.cs StackFrame.cs Style.cs SymbolTableCollection.cs \
+	SymbolTable.cs SymbolTableException.cs TargetAddress.cs TargetBinaryAccess.cs \
+	TargetBinaryReader.cs TargetBinaryWriter.cs TargetEvent.cs TargetException.cs \
+	TargetInvocationException.cs TargetMemoryArea.cs TargetMemoryException.cs \
+	Thread.cs ThreadGroup.cs
