2006-04-18  Martin Baulig  <martin@ximian.com>
	* frontend/Command.cs (ProcessCommand): New public abstract class.
	(DetachCommand): New command.  Note that we can only detach from a
	process if we previously attached to it.


svn path=/trunk/debugger/; revision=59614

--- a/test/src/Makefile.am
+++ b/test/src/Makefile.am
@@ -10,7 +10,7 @@ noinst_SCRIPTS = \
 	TestRestart.exe TestNull.exe TestByRef.exe \
 	TestToString.exe TestObject.exe TestProperty.exe TestAbort.exe \
 	TestBreakpoint.exe TestNamespace.exe TestException.exe \
-	TestRestart.exe TestExec.exe TestChild.exe
+	TestRestart.exe TestExec.exe TestChild.exe TestAttach.exe
 
 EXTRA_DIST = \
 	TestManagedTypes.cs TestInvocation.cs TestInheritance.cs \
@@ -18,9 +18,10 @@ EXTRA_DIST = \
 	TestRestart.cs TestNull.cs TestByRef.cs \
 	TestToString.cs TestObject.cs TestProperty.cs TestAbort.cs \
 	TestBreakpoint.cs TestNamespace.cs TestException.cs \
-	TestRestart.cs TestExec.cs TestChild.cs
+	TestRestart.cs TestExec.cs TestChild.cs TestAttach.cs
 
-noinst_PROGRAMS = testnativefork testnativeexec testnativechild
+noinst_PROGRAMS = \
+	testnativefork testnativeexec testnativechild testnativeattach
 
 %.exe:%.cs
 	$(MCS) $(MCS_FLAGS) -out:$@ $<
