--- a/test/testsuite/Makefile.am
+++ b/test/testsuite/Makefile.am
@@ -3,4 +3,6 @@ EXTRA_DIST = \
 	TestBreakpoint.cs TestByRef.cs TestDelegate.cs TestEnum.cs \
 	TestIndexer.cs TestInheritance.cs TestInvocation.cs \
 	TestManagedTypes.cs TestNamespace.cs TestNull.cs TestObject.cs \
-	TestProperty.cs TestToString.cs testnativefork.cs testnativeexec.cs
+	TestProperty.cs TestToString.cs testnativefork.cs testnativeexec.cs \
+	TestAttach.cs testnativeattach.cs
+
