--- a/test/src/Makefile.am
+++ b/test/src/Makefile.am
@@ -10,7 +10,8 @@ noinst_SCRIPTS = \
 	TestRestart.exe TestNull.exe TestByRef.exe \
 	TestToString.exe TestObject.exe TestProperty.exe TestAbort.exe \
 	TestBreakpoint.exe TestNamespace.exe TestException.exe \
-	TestRestart.exe TestExec.exe TestChild.exe TestAttach.exe
+	TestRestart.exe TestExec.exe TestChild.exe TestAttach.exe \
+	TestMethodLookup.cs
 
 EXTRA_DIST = \
 	TestManagedTypes.cs TestInvocation.cs TestInheritance.cs \
@@ -18,7 +19,8 @@ EXTRA_DIST = \
 	TestRestart.cs TestNull.cs TestByRef.cs \
 	TestToString.cs TestObject.cs TestProperty.cs TestAbort.cs \
 	TestBreakpoint.cs TestNamespace.cs TestException.cs \
-	TestRestart.cs TestExec.cs TestChild.cs TestAttach.cs
+	TestRestart.cs TestExec.cs TestChild.cs TestAttach.cs \
+	TestMethodLookup.cs
 
 noinst_PROGRAMS = \
 	testnativefork testnativeexec testnativechild testnativeattach
