--- a/backends/Makefile.am
+++ b/backends/Makefile.am
@@ -4,4 +4,5 @@ EXTRA_DIST = \
 	BreakpointHandle.cs BreakpointManager.cs EventQueue.cs ILanguageBackend.cs \
 	Inferior.cs ModuleManager.cs MonoThreadManager.cs ProcessStart.cs \
 	SingleSteppingEngine.cs StepFrame.cs SymbolTableManager.cs TargetAccess.cs \
-	TargetMemoryAccess.cs TargetReader.cs ThreadManager.cs
+	TargetMemoryAccess.cs TargetReader.cs ThreadManager.cs ThreadServant.cs \
+	ProcessServant.cs DebuggerServant.cs
