--- a/test/testsuite/Makefile.am
+++ b/test/testsuite/Makefile.am
@@ -1,8 +1,10 @@
 EXTRA_DIST = \
 	NUnit.cs \
-	TestBreakpoint.cs TestByRef.cs TestDelegate.cs TestEnum.cs \
+	TestAbort.cs TestAttach.cs TestBreakpoint.cs TestByRef.cs \
+	TestDelegate.cs TestEnum.cs TestException.cs TestExec.cs \
 	TestIndexer.cs TestInheritance.cs TestInvocation.cs \
-	TestManagedTypes.cs TestNamespace.cs TestNull.cs TestObject.cs \
-	TestProperty.cs TestToString.cs testnativefork.cs testnativeexec.cs \
-	TestAttach.cs TestMethodLookup.cs testnativeattach.cs
+	TestManagedTypes.cs TestMethodLookup.cs TestNamespace.cs \
+	testnativeattach.cs testnativeexec.cs testnativefork.cs \
+	TestNull.cs TestObject.cs TestProperty.cs TestRestart.cs \
+	TestToString.cs
 
