--- a/configure.in
+++ b/configure.in
@@ -216,6 +216,16 @@ AC_CHECK_FUNCS(strlcpy strlcat)
 
 CHECK_READLINE
 
+AC_MSG_CHECKING([Whether your Mono is working])
+AC_TRY_COMPILE([#include <mono/metadata/mono-debug.h>
+], [
+   return MONO_DEBUGGER_VERSION >= 57;
+], mono_working=yes, mono_working=no)
+AC_MSG_RESULT($mono_working)
+if test x$mono_working != xyes; then
+   AC_MSG_ERROR([*** Your Mono is too old for this version of the debugger.])
+fi
+
 AM_CONDITIONAL(DISABLED, false)
 
 AC_OUTPUT([
