--- a/backends/Makefile.am
+++ b/backends/Makefile.am
@@ -2,7 +2,7 @@ SUBDIRS = server
 
 EXTRA_DIST = \
 	BreakpointHandle.cs BreakpointManager.cs EventQueue.cs ILanguageBackend.cs \
-	Inferior.cs ModuleManager.cs MonoThreadManager.cs ProcessStart.cs \
+	Inferior.cs MonoThreadManager.cs ProcessStart.cs \
 	SingleSteppingEngine.cs StepFrame.cs SymbolTableManager.cs TargetAccess.cs \
 	TargetMemoryAccess.cs TargetReader.cs ThreadManager.cs ThreadServant.cs \
 	ProcessServant.cs DebuggerServant.cs
