--- a/test/testsuite/Makefile.am
+++ b/test/testsuite/Makefile.am
@@ -6,5 +6,5 @@ EXTRA_DIST = \
 	TestManagedTypes.cs TestMethodLookup.cs TestNamespace.cs \
 	testnativeattach.cs testnativeexec.cs testnativefork.cs \
 	TestNull.cs TestObject.cs TestProperty.cs TestRestart.cs \
-	TestToString.cs
+	TestToString.cs TestMultiThread.cs
 
