* frontend/Command.cs: Added "[un]display" and enhanced "examine". 	* frontend/Style.cs: In StyleCLI.TargetStopped, added code to 	show displays to the user. 	* frontend/Displays.cs: Implemented displays. 	* frontend/Interpreter.cs: Added the collection of displays to 	the interpreter instance. 	* build/Makefile.am, frontend/Makefile.am: added Displays.cs 	* api/IStackFrame.cs: Added import to make build in Monodevelop happy.
svn path=/trunk/debugger/; revision=73928

--- a/frontend/Makefile.am
+++ b/frontend/Makefile.am
@@ -21,6 +21,7 @@ EXTRA_DIST = \
 	GnuReadLine.cs			\
 	IExpressionParser.cs		\
 	Interpreter.cs			\
+	Displays.cs			\
 	Main.cs				\
 	MyTextReader.cs			\
 	ScriptingContext.cs		\
