--- a/classes/Makefile.am
+++ b/classes/Makefile.am
@@ -1,12 +1,43 @@
 EXTRA_DIST = \
-	AssemblerMethod.cs Backtrace.cs Breakpoint.cs Debugger.cs \
-	DebuggerSession.cs Event.cs ExceptionCatchPoint.cs InternalError.cs Method.cs \
-	MethodSource.cs Module.cs ObjectCache.cs Process.cs Semaphore.cs \
-	SourceAddress.cs SourceBuffer.cs SourceFileFactory.cs SourceInfo.cs \
-	SourceLocation.cs StackFrame.cs Style.cs SymbolTableCollection.cs \
-	SymbolTable.cs SymbolTableException.cs TargetBinaryAccess.cs \
-	TargetBinaryReader.cs TargetBinaryWriter.cs TargetEvent.cs TargetException.cs \
-	TargetInvocationException.cs TargetMemoryArea.cs TargetMemoryException.cs \
-	Thread.cs ThreadGroup.cs DebuggerOptions.cs \
-	DebuggerConfiguration.cs DebuggerConfiguration.xsd \
-	ISymbolTable.cs ITargetNotification.cs
+	AddressBreakpoint.cs \
+	AssemblerMethod.cs \
+	Backtrace.cs \
+	Breakpoint.cs \
+	Debugger.cs \
+	DebuggerConfiguration.cs \
+	DebuggerConfiguration.xsd \
+	DebuggerOptions.cs \
+	DebuggerSession.cs \
+	Event.cs \
+	ExceptionCatchPoint.cs \
+	ExpressionBreakpoint.cs \
+	ISymbolTable.cs \
+	ITargetNotification.cs \
+	InternalError.cs \
+	Method.cs \
+	MethodSource.cs \
+	Module.cs \
+	ObjectCache.cs \
+	Process.cs \
+	Semaphore.cs \
+	SourceAddress.cs \
+	SourceBreakpoint.cs \
+	SourceBuffer.cs \
+	SourceFileFactory.cs \
+	SourceInfo.cs \
+	SourceLocation.cs \
+	StackFrame.cs \
+	Style.cs \
+	SymbolTableCollection.cs \
+	SymbolTable.cs \
+	SymbolTableException.cs \
+	TargetBinaryAccess.cs \
+	TargetBinaryReader.cs \
+	TargetBinaryWriter.cs \
+	TargetEvent.cs \
+	TargetException.cs \
+	TargetInvocationException.cs \
+	TargetMemoryArea.cs \
+	TargetMemoryException.cs \
+	Thread.cs \
+	ThreadGroup.cs
