Fix make dist...
svn path=/trunk/debugger/; revision=75905

--- a/classes/Makefile.am
+++ b/classes/Makefile.am
@@ -8,6 +8,7 @@ EXTRA_DIST = \
 	DebuggerConfiguration.xsd \
 	DebuggerOptions.cs \
 	DebuggerSession.cs \
+	Display.cs \
 	Event.cs \
 	ExceptionCatchPoint.cs \
 	ExpressionBreakpoint.cs \
