Add missing file...
svn path=/trunk/debugger/; revision=78146

--- a/classes/Makefile.am
+++ b/classes/Makefile.am
@@ -15,6 +15,7 @@ EXTRA_DIST = \
 	ISymbolTable.cs \
 	ITargetNotification.cs \
 	InternalError.cs \
+	LineNumberTable.cs \
 	Method.cs \
 	Module.cs \
 	ObjectCache.cs \
