2007-06-04  Martin Baulig  <martin@ximian.com>
	Replace `SourceMethod' with a new abstract `MethodSource'.

	* classes/MethodSource.cs: New file.
	(MethodSource): New public abstract class.

	* classes/SourceInfo.cs
	(SourceMethod): Removed; we now use the new `MethodSource'.

	* classes/Module.cs
	(Module.LookupMethod): Removed; use FindMethod() instead.
	(Module.RegisterLoadHandler): Removed.


svn path=/branches/martin/debugger-dublin/; revision=78549

--- a/debugger/classes/Makefile.am
+++ b/debugger/classes/Makefile.am
@@ -17,6 +17,7 @@ EXTRA_DIST = \
 	InternalError.cs \
 	LineNumberTable.cs \
 	Method.cs \
+	MethodSource.cs \
 	Module.cs \
 	ObjectCache.cs \
 	Process.cs \
