--- a/debugger/test/src/Makefile.am
+++ b/debugger/test/src/Makefile.am
@@ -11,7 +11,7 @@ noinst_SCRIPTS = \
 	TestToString.exe TestObject.exe TestProperty.exe TestAbort.exe \
 	TestBreakpoint.exe TestNamespace.exe TestException.exe \
 	TestRestart.exe TestExec.exe TestChild.exe TestAttach.exe \
-	TestMethodLookup.exe TestMultiThread.exe
+	TestMethodLookup.exe TestMultiThread.exe TestCCtor.exe
 
 EXTRA_DIST = \
 	TestManagedTypes.cs TestInvocation.cs TestInheritance.cs \
@@ -20,7 +20,8 @@ EXTRA_DIST = \
 	TestToString.cs TestObject.cs TestProperty.cs TestAbort.cs \
 	TestBreakpoint.cs TestNamespace.cs TestException.cs \
 	TestRestart.cs TestExec.cs TestChild.cs TestAttach.cs \
-	TestMethodLookup.cs TestMultiThread.cs TestSession.cs
+	TestMethodLookup.cs TestMultiThread.cs TestSession.cs \
+	TestCCtor.cs
 
 noinst_PROGRAMS = \
 	testnativefork testnativeexec testnativechild testnativeattach
