2007-07-30  Martin Baulig  <martin@ximian.com>
	* test/testsuite/testnativetypes.cs: New test.
	* test/src/testnativetypes.c: New test.


svn path=/branches/martin/debugger-dublin/; revision=82966

--- a/debugger/test/src/Makefile.am
+++ b/debugger/test/src/Makefile.am
@@ -24,7 +24,8 @@ EXTRA_DIST = \
 	TestCCtor.cs
 
 noinst_PROGRAMS = \
-	testnativefork testnativeexec testnativechild testnativeattach
+	testnativefork testnativeexec testnativechild testnativeattach \
+	testnativetypes
 
 %.exe:%.cs
 	$(MCS) $(MCS_FLAGS) -out:$@ $<
